# todo-api

./: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/: alembic.ini  config.py  main.py
backend/app/api/: api.py  dependencies.py
backend/app/api/endpoints/: auth.py  books.py  notes.py  users.py
backend/app/core/: auth.py  auth_base.py  config.py  crypt.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  books_models.py  notes_models.py  users_models.py
backend/app/db/repositories/: base_repo.py  book_repo.py  note_repo.py  user_repo.py
backend/app/models/: books_models.py  notes_models.py  users_models.py
backend/app/repositories/: base_repo.py  book_repo.py  note_repo.py  user_repo.py
backend/app/schemas/: books_schema.py  notes_schema.py  response_schema.py  users_schema.py
backend/app/services/: __init__.py  book_services.py  note_services.py  user_services.py
backend/app/tools/: annotations.py  enums.py  exceptions.py
backend/migration/: env.py
backend/migration/versions/: 0188e1d741ea_changed_book_default_status.py  0df9ad67bc5d_initial_revision.py  1252c9d19d7d_fix_datetime_timezone.py  27f5213fa3a8_initial_revision.py  727ea1cb1b9c_user_last_name_column_fix.py  964bd9b992b1_notes_default_status_change.py  9974d6bafcb0_note_author_id_column_rename.py
