[project]
name = "todolistapi"
version = "0.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.1.0"
ruff = "^0.13.2"
mypy = "^1.18.2"
types-python-jose = "^3.5.0.20250531"

[tool.mypy]
python_version = "3.13"
plugins = [
    "sqlalchemy.ext.mypy.plugin",  # плагин для SQLAlchemy ORM
    "pydantic.mypy"                # плагин для Pydantic
]
ignore_missing_imports = true  
disallow_untyped_defs = true   
disallow_incomplete_defs = true
check_untyped_defs = true      
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true

files = [
        "backend/"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true